work in progress

--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -52,8 +52,8 @@
             </li>
           </ul>
 
-          <button class="header-top-btn"><a href="/propertyList/new">Add Listing</a></button>
-          <span style="color: azure;">user</span>
+          <button class="header-top-btn"><a href="/propertyList/new" style="color: aliceblue;">Add Listing</a></button>
+          <button class="header-top-btn"><a href="/logout" style="color: aliceblue;">Logout</a></button>
         </div>
       </div>
     </div>
@@ -102,7 +102,7 @@
               </li>
 
               <li>
-                <a href="contact.html" class="navbar-link" data-nav-link
+                <a href="/contact" class="navbar-link" data-nav-link
                   >Contact</a
                 >
               </li>
