--- a/views/users/login.ejs
+++ b/views/users/login.ejs
@@ -1,52 +1,55 @@
+
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
-    <title>Login-HomeBase</title>
-    <link rel="stylesheet" type="text/css" href="/css/login.css" />
-    <link
-      href="https://fonts.googleapis.com/css?family=Poppins:600&display=swap"
-      rel="stylesheet"
-    />
-    <script src="https://kit.fontawesome.com/a81368914c.js"></script>
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Login - HomeBse</title>
+    <link rel="stylesheet" href="/css/login.css" />
     <link rel="shortcut icon" href="./favicon.svg" type="image/svg+xml" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
+    />
+
+    
   </head>
   <body>
     <div class="container">
-      <div class="img">
-        <div class="login-content">
-          <form action="index.ejs">
-            <img src="/images/avatar.svg" />
-            <h2 class="title">Welcome</h2>
-            <div class="input-div one">
-              <div class="i">
-                <i class="fas fa-user"></i>
-              </div>
-              <div class="div">
-                <h5>Username</h5>
-                <input type="text" class="input" />
-              </div>
+      <div class="login-container">
+        <h2>Login</h2>
+        <form id="login-form" action="/login" method="post">
+          <div class="form-group">
+            <label for="email">Email</label>
+            <div class="input-wrapper">
+              <i class="fas fa-envelope"></i>
+              <input type="email" id="email" name="email" required />
             </div>
-            <div class="input-div pass">
-              <div class="i">
-                <i class="fas fa-lock"></i>
-              </div>
-              <div class="div">
-                <h5>Password</h5>
-                <input type="password" class="input" />
-              </div>
+          </div>
+          <div class="form-group">
+            <label for="password">Password</label>
+            <div class="input-wrapper">
+              <i class="fas fa-lock"></i>
+              <input type="password" id="password" name="password" required />
             </div>
-            <a href="#">Forgot Password?</a>
-            <input type="submit" class="btn" value="Login" />
-            <div class="signUp">
-              <span
-                >Don't have an Account? <a href="/signup">Sign up</a></span
-              >
+          </div>
+
+          <% if (locals.error) { %>
+            <div id="error-message" class="container-fluid">
+                <div class="alert alert-danger py-1" role="alert">
+                    <%= locals.error %>
+                </div>
             </div>
-          </form>
-        </div>
+            <% } %>
+
+          <div class="form-group">
+            <button type="submit" class="btn">Login</button>
+          </div>
+          <div class="form-group">
+            <p>Not registered? <a href="/signup">Sign Up</a></p>
+          </div>
+        </form>
       </div>
     </div>
-    <script type="text/javascript" src="/js/login.js"></script>
   </body>
-</html>
+  </html>
