--- a/views/includes/footer.ejs
+++ b/views/includes/footer.ejs
@@ -153,7 +153,7 @@
     <div class="footer-bottom">
       <div class="container">
         <p class="copyright">
-          &copy; 2024 <a href="#">team3</a>. All Rights Reserved!
+          &copy; 2024 <a href="#" style="text-decoration: none;">team3</a>. All Rights Reserved!
         </p>
       </div>
     </div>
