--- a/views/includes/navbar2.ejs
+++ b/views/includes/navbar2.ejs
@@ -108,6 +108,9 @@
             <li class="nav-item">
               <a class="nav-link" href="#">Contact</a>
             </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/propertyList/new">Add Property</a>
+            </li>
           </ul>
         </div>
         <form class="d-flex me-3">
