--- a/views/layouts/boilerplate2.ejs
+++ b/views/layouts/boilerplate2.ejs
@@ -5,9 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Property</title>
     <link rel="shortcut icon" href="./favicon.svg" type="image/svg+xml" />
-    <!-- <link rel="stylesheet" href="/css/style.css"> -->
-    <link rel="stylesheet" href="/css/add_new.css">
-    <link rel="stylesheet" href="/css/property.css">
+    <link rel="stylesheet" href="/css/add_new.css"> 
+    <!-- <link rel="stylesheet" href="/css/property.css"> -->
+    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/css/propertyList.css">
     <script src="https://unpkg.com/ionicons@5.5.2/dist/ionicons.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
   </head>
@@ -15,5 +16,8 @@
     <script src="/js/propertyList.js"></script>
     <%- include("../includes/navbar2.ejs")  %>
     <div class="container"><%- body %></div>
+    <%- include("../includes/footer.ejs")  %>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="/js/form.js"></script>
   </body>
   </html>
