--- a/views/properties/view_property.ejs
+++ b/views/properties/view_property.ejs
@@ -1,23 +1,180 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <h3>property detals</h3>
-        <ul>
-            <li><%= showProperty.title %></li>
-            <li><%= showProperty.description %></li>
-            <li>&#8377;<%= showProperty.price.toLocaleString("en-IN") %></li>
-            <li><%= showProperty.location %></li>
-            <li><%= showProperty.country %></li>
-        </ul>
-        <a href="/properties/<%= showProperty._id %>/edit">edit</a>
+
+  <!DOCTYPE html>
+  <html lang="en">
+    <head>
+      <meta charset="UTF-8" />
+      <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+      <title>Property</title>
+      <link rel="shortcut icon" href="/favicon.svg" type="image/svg+xml" />
+      <link rel="stylesheet" href="/css/property.css" />
+      <script src="https://unpkg.com/ionicons@5.5.2/dist/ionicons.js"></script>
+    </head>
+    <body>
+      <section class="property">
+        <div class="container">
+          <p class="section-subtitle">Properties</p>
+          <h2 class="section-title">Featured listing</h2>
+  
+          <ul>
+            <li>
+              <div class="property-card">
+                <figure class="card-banner">
+                  <a href="#">
+                    <img
+                      src="<%= showProperty.image %>"
+                      alt="Luxury villa in Rego Park"
+                      class="w-100"
+                    />
+                  </a>
+  
+                  <div class="card-badge">For Rent</div>
+  
+                  <div class="banner-actions">
+                    <button class="banner-actions-btn">
+                      <ion-icon name="location"></ion-icon>
+                      <address>Dev nagar, lane no. 1</address>
+                    </button>
+  
+                    <button class="banner-actions-btn">
+                      <ion-icon name="camera"></ion-icon>
+                      <span>4</span>
+                    </button>
+  
+                    <button class="banner-actions-btn">
+                      <ion-icon name="film"></ion-icon>
+                      <span>2</span>
+                    </button>
+                  </div>
+                </figure>
+  
+                <div class="card-content">
+                  <div class="card-price"><strong><%= showProperty.price %></strong>/Month</div>
+  
+                  <h3 class="card-title">
+                    <a href="#"><%= showProperty.title %></a>
+                  </h3>
+  
+                  <p class="card-text">
+                    <%= showProperty.description %>
+                  </p>
+  
+                  <ul class="card-list">
+                    <li class="card-item">
+                      <strong><%= showProperty.bedrooms %></strong>
+                      <ion-icon name="bed-outline"></ion-icon>
+                      <span>Bedrooms</span>
+                    </li>
+                    <li class="card-item">
+                      <strong><%= showProperty.bathrooms %></strong>
+                      <ion-icon name="man-outline"></ion-icon>
+                      <span>Bathrooms</span>
+                    </li>
+                    <li class="card-item">
+                      <strong><%= showProperty.squarefeet %></strong>
+                      <ion-icon name="square-outline"></ion-icon>
+                      <span>Square Ft</span>
+                    </li>
+                  </ul>
+                  <button
+                    class="view-property-btn"
+                    onclick="showPropertyDetails()"
+                  >
+                    View Property
+                  </button>
+                </div>
+  
+                <div class="card-footer">
+                  <div class="card-author">
+                    <figure class="author-avatar">
+                      <img
+                        src="/images/author.jpg"
+                        alt="William Seklo"
+                        class="w-100"
+                      />
+                    </figure>
+  
+                    <div>
+                      <p class="author-name">
+                        <a href="#"><%= showProperty.sellername %></a>
+                      </p>
+  
+                      <p class="author-contact">
+                        <a href="tel:+919798511430"><%= showProperty.sellercontact %></a>
+                      </p>
+                    </div>
+                  </div>
+  
+                  <div class="card-footer-actions">
+                    <button class="card-footer-actions-btn">
+                      <ion-icon name="resize-outline"></ion-icon>
+                    </button>
+  
+                    <button class="card-footer-actions-btn">
+                      <ion-icon name="heart-outline"></ion-icon>
+                    </button>
+  
+                    <button class="card-footer-actions-btn">
+                      <ion-icon name="add-circle-outline"></ion-icon>
+                    </button>
+                  </div>
+                </div>
+              </div>
+            </li>
+          </ul>
+          <div class="btns">
+            <a href="/properties/<%= showProperty._id %>/edit" class="edit">edit</a>
         <form action="/properties/<%= showProperty._id %>?_method=DELETE" method="POST">
-            <button type="submit">Delete</button>
+            <button type="submit" class="btn">Delete</button>
         </form>
-    
-</body>
-</html>
+        </div>
+
+        <!-- review section -->
+        <hr>
+        <div class="review">
+          <h4>Leave a review</h4>
+          <form action="/properties/<%= showProperty._id %>/reviews" method="post " class="review-form">
+            <div class="rev">
+              <label for="rating">Rating</label>
+              <input type="range" name="review[rating]" id="rating" min="1" max="5">
+            </div>
+            <div class="rev-w">
+              <label for="comment">Comment</label>
+              <textarea name="review[comment]"  id="comment" cols="30" rows="10"></textarea>
+            </div>
+            <button class="r-btn">submit</button>
+          </form>
+        </div>
+        <!-- end here -->
+        </div>
+      </section>
+      <!-- The Modal -->
+      <div id="propertyModal" class="modal">
+        <!-- Modal content -->
+        <div class="modal-content">
+          <span class="close" onclick="closePropertyDetails()">&times;</span>
+          <img
+            id="modal-property-image"
+            src="<%= showProperty.image %>"
+            alt="Property Image"
+            style="
+              width: 100%;
+              height: auto;
+              border-radius: 16px;
+              margin-bottom: 20px;
+            "
+          />
+          <h2><%= showProperty.title %></h2>
+          <p><strong>Location:</strong> <%= showProperty.location %></p>
+          <p><strong>Price:</strong> <%= showProperty.price %>/Month</p>
+          <p>
+            <strong>Description:</strong> <%= showProperty.description %>
+          </p>
+          <p><strong>Bedrooms:</strong> <%= showProperty.bedrooms %></p>
+          <p><strong>Bathrooms:</strong> <%= showProperty.bathrooms %></p>
+          <p><strong>Square Ft:</strong> <%= showProperty.squarefeet %></p>
+        </div>
+      </div>
+  
+      <script src="/js/propertyList.js"></script>
+    </body>
+  </html>
