fix the route error and add costome flash message

--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -52,7 +52,7 @@
             </li>
           </ul>
 
-          <button class="header-top-btn"><a href="/propertyList/new" style="color: aliceblue;">Add Listing</a></button>
+          <button class="header-top-btn"><a href="/properties/propertyList/new" style="color: aliceblue;">Add Listing</a></button>
           <button class="header-top-btn"><a href="/logout" style="color: aliceblue;">Logout</a></button>
         </div>
       </div>
