--- a/views/includes/navbar2.ejs
+++ b/views/includes/navbar2.ejs
@@ -109,7 +109,7 @@
               <a class="nav-link" href="#">Contact</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/propertyList/new">Add Property</a>
+              <a class="nav-link" href="/properties/propertyList/new">Add Property</a>
             </li>
           </ul>
         </div>
