--- a/views/properties/index.ejs
+++ b/views/properties/index.ejs
@@ -559,7 +559,7 @@
                 </p>
               </div>
 
-              <button class="btn cta-btn" onclick="location.href='/propertyList'">
+              <button class="btn cta-btn" onclick="location.href='/properties/propertyList'">
                 <span>Explore properties</span>
 
                 <ion-icon name="arrow-forward-outline"></ion-icon>
