--- a/views/layouts/boilerplate2.ejs
+++ b/views/layouts/boilerplate2.ejs
@@ -15,7 +15,9 @@
   <body>
     <script src="/js/propertyList.js"></script>
     <%- include("../includes/navbar2.ejs")  %>
-    <div class="container"><%- body %></div>
+    <div class="container">
+      <%- include("../includes/flash.ejs")  %>
+      <%- body %></div>
     <%- include("../includes/footer.ejs")  %>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="/js/form.js"></script>
