--- a/views/properties/add_new.ejs
+++ b/views/properties/add_new.ejs
@@ -4,7 +4,7 @@
         <br /><br />
         <h2>Create a new listing</h2>
         
-        <form action="/propertyList" method="POST">
+        <form action="/properties/propertyList" method="POST">
             
             <!-- --------------new added -->
 
