--- a/views/properties/propertyList.ejs
+++ b/views/properties/propertyList.ejs
@@ -1,6 +1,6 @@
 <% layout("/layouts/boilerplate2") %>
   <body>
-    <form action="/propertyList/new" method="get">
+    <form action="/properties/new" method="get">
       <!-- <button>create listing</button> -->
     </form>
     <div class="row row-cols-lg-3 row-cols-md-2 row-cols-sm-1 mt-3">
