--- a/views/includes/navbar2.ejs
+++ b/views/includes/navbar2.ejs
@@ -94,7 +94,7 @@
           <ul class="navbar-nav">
             <!-- Centered Items -->
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Home</a>
+              <a class="nav-link active" aria-current="page" href="/properties/propertyList">Home</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">About</a>
