--- a/views/users/login.ejs
+++ b/views/users/login.ejs
@@ -5,6 +5,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Login - HomeBse</title>
+    <link
+    href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
+    rel="stylesheet"
+  />
     <link rel="stylesheet" href="/css/login.css" />
     <link rel="shortcut icon" href="./favicon.svg" type="image/svg+xml" />
     <link
@@ -17,13 +21,14 @@
   <body>
     <div class="container">
       <div class="login-container">
+        <%- include("../includes/flash.ejs")  %>
         <h2>Login</h2>
         <form id="login-form" action="/login" method="post">
           <div class="form-group">
-            <label for="email">Email</label>
+            <label for="email">username</label>
             <div class="input-wrapper">
               <i class="fas fa-envelope"></i>
-              <input type="email" id="email" name="email" required />
+              <input type="text" id="email" name="username" required />
             </div>
           </div>
           <div class="form-group">
@@ -33,15 +38,6 @@
               <input type="password" id="password" name="password" required />
             </div>
           </div>
-
-          <% if (locals.error) { %>
-            <div id="error-message" class="container-fluid">
-                <div class="alert alert-danger py-1" role="alert">
-                    <%= locals.error %>
-                </div>
-            </div>
-            <% } %>
-
           <div class="form-group">
             <button type="submit" class="btn">Login</button>
           </div>
@@ -51,5 +47,6 @@
         </form>
       </div>
     </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   </body>
   </html>
