--- a/views/users/signup.ejs
+++ b/views/users/signup.ejs
@@ -5,6 +5,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Signup - HomeBse</title>
+    <link
+    href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
+    rel="stylesheet"
+  />
     <link rel="stylesheet" href="/css/signup.css" />
     <link rel="shortcut icon" href="./favicon.svg" type="image/svg+xml" />
     <link
@@ -13,7 +17,11 @@
     />
   </head>
   <body>
+   
     <div class="container">
+      <div class="error-cls">
+        <p> <%- include("../includes/flash.ejs")  %></p>
+      </div>
       <div class="signup-container">
         <h2>Sign Up</h2>
         <form id="signup-form" action="/signup" method="post">
@@ -91,5 +99,7 @@
         </ul>
       </div>
     </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   </body>
   </html>
