all setup with authentication and authorization is done

--- a/views/includes/navbar2.ejs
+++ b/views/includes/navbar2.ejs
@@ -96,7 +96,7 @@
             <li class="nav-item">
               <a class="nav-link active" aria-current="page" href="/properties/propertyList">Home</a>
             </li>
-            <li class="nav-item">
+            <!-- <li class="nav-item">
               <a class="nav-link" href="#">About</a>
             </li>
             <li class="nav-item">
@@ -104,9 +104,9 @@
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">Property</a>
-            </li>
+            </li> -->
             <li class="nav-item">
-              <a class="nav-link" href="#">Contact</a>
+              <a class="nav-link" href="/contact">Contact</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="/properties/propertyList/new">Add Property</a>
@@ -125,7 +125,7 @@
           </button>
         </form>
         <div class="d-flex">
-          <a href="#" class="btn btn-profile me-2"
+          <a href="/seller" class="btn btn-profile me-2"
             ><i class="fas fa-user"></i
           ></a>
           <a href="#" class="btn btn-cart"
