--- a/views/properties/edit.ejs
+++ b/views/properties/edit.ejs
@@ -3,8 +3,7 @@
     <div class="col-8 offset-2">
         <br /><br />
         <h2>Edit your Details</h2>
-        
-        <form action="/properties/<%= showProperty._id %>?_method=put" method="post">
+        <form action="/properties/<%= showProperty._id %>?_method=put" method="post" enctype="multipart/form-data">
             
             <!-- --------------Edit  -->
 
@@ -61,20 +60,22 @@
                 >
                 <input type="number" id="square-feet" name="property[squarefeet]" value="<%= showProperty.squarefeet %>" />
               </div>
-    
+
+              <div class="form-group">
+                <p><b>Original image</b></p>
+                <img src="<%= originalImageUrl %>" alt="" height="100px" width="100px" class="img-upd">
+              </div>
+              
+
               <div class="form-group">
                 <label for="property-image"
-                  ><i class="fas fa-image"></i> Property Image</label
-                >
+                  ><i class="fas fa-image"></i> uploade new Image</label>
                 <input
                   type="file"
                   id="property-image"
                   name="property[image]"
-                  value="<%= showProperty.image %>"
-                  
                 />
               </div>
-    
               <div class="form-group">
                 <label for="seller-name"
                   ><i class="fas fa-user"></i> Seller Name</label
