--- a/views/properties/propertyList.ejs
+++ b/views/properties/propertyList.ejs
@@ -7,7 +7,7 @@
       <% for(let property of allListing){ %>
         <a href="/properties/<%= property._id %>" class="listing-link">
       <div class="card col listing-card">
-          <img src="<%= property.image %>" class="card-img-top" alt="listing image" style="height: 20rem;">
+          <img src="<%= property.image.url %>" class="card-img-top" alt="listing image" style="height: 20rem;">
           <div class="card-img-overlay"></div>
           <div class="card-body">
             <p class="card-text">
