--- a/views/properties/view_property.ejs
+++ b/views/properties/view_property.ejs
@@ -5,6 +5,7 @@
       <meta charset="UTF-8" />
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
       <title>Property</title>
+      <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"> -->
       <link rel="shortcut icon" href="/favicon.svg" type="image/svg+xml" />
       <link rel="stylesheet" href="/css/property.css" />
       <script src="https://unpkg.com/ionicons@5.5.2/dist/ionicons.js"></script>
@@ -21,7 +22,7 @@
                 <figure class="card-banner">
                   <a href="#">
                     <img
-                      src="<%= showProperty.image %>"
+                      src="<%= showProperty.image.url %>"
                       alt="Luxury villa in Rego Park"
                       class="w-100"
                     />
@@ -53,7 +54,7 @@
                   <h3 class="card-title">
                     <a href="#"><%= showProperty.title %></a>
                   </h3>
-  
+                  <p class="card-text"><h3>ownered by : <%= showProperty.owner.username %></h3></p>
                   <p class="card-text">
                     <%= showProperty.description %>
                   </p>
@@ -121,49 +122,63 @@
               </div>
             </li>
           </ul>
+          <% if(currUser && currUser._id.equals(showProperty.owner._id)) {%>
           <div class="btns">
             <a href="/properties/<%= showProperty._id %>/edit" class="edit">edit</a>
         <form action="/properties/<%= showProperty._id %>?_method=DELETE" method="POST">
             <button type="submit" class="btn">Delete</button>
         </form>
         </div>
+        <% } %>
+        <hr>
 
         <!-- review section -->
-        <hr>
-        <h3>ownered by : <%= showProperty.owner.username %></h3>
         
-        <div class="review">
-          <h4>Leave a review</h4>
-          <form action="/properties/<%= showProperty._id %>/reviews" method="post" class="review-form">
-            <div class="rev">
-              <label for="rating">Rating</label>
-              <input type="range" name="review[rating]" id="rating" min="1" max="5">
-            </div>
-            <div class="rev-w">
-              <label for="comment">Comment</label>
-              <textarea name="review[comment]"  id="comment" cols="30" rows="10" required></textarea>
-            </div>
-            <button class="r-btn">submit</button>
-          </form>
-        </div>
-        <!-- end here -->
-
-          <!-- show review -->
-        <div class="rev-cls">
-          <p><b>All Reviews</b></p>
-          <ul class="rev-ul">
-            <% for(review of showProperty.reviews) {%>
-              <li class="rev-li"><%=review.comment%> , <%= review.rating %>
-              <form action="/properties/<%= showProperty._id %>/reviews/<%= review._id %>?_method=DELETE" method="post">
-                <button type="submit">Delete</button>
-              </form>
-            </li>
-              <% } %>
-          </ul>
-        </div>
+        
         <!-- ----------end here-------- -->
         </div>
       </section>
+
+      <!-- review section -->
+      <section class="review-sec">
+      <div class="review">
+        <h4>Leave a review</h4>
+        <form action="/properties/<%= showProperty._id %>/reviews" method="post" class="review-form">
+          <div class="rev">
+            <label for="rating">Rating</label>
+            <input type="range" name="review[rating]" id="rating" min="1" max="5">
+          </div>
+          <div class="rev-w">
+            <label for="comment">Comment</label>
+            <textarea name="review[comment]"  id="comment" cols="70" rows="5" required></textarea>
+          </div>
+          <button class="r-btn">submit</button>
+        </form>
+        
+      </div>
+      <!-- create review end -->
+
+        <!-- show review -->
+      <p><b>All Reviews</b></p>
+      <% for(review of showProperty.reviews) {%>
+      <div class="custom-card">
+        <div class="card-body">
+          <h5 class="card-title">author@ <%= review.author.username %></h5>
+          <p class="card-text"><%=review.comment%></p>
+          <p class="card-text"><%=review.rating%></p>
+          <% if(review.author._id.equals(currUser._id)) { %> 
+            <form action="/properties/<%= showProperty._id %>/reviews/<%= review._id %>?_method=DELETE" method="post">
+              <button type="submit">Delete</button>
+            </form>
+            <% } %>
+        </div>
+      </div>
+      <% } %>
+      </section>
+
+      <!-- ---------end---------- -->
+
+
       <!-- The Modal -->
       <div id="propertyModal" class="modal">
         <!-- Modal content -->
